# PL_WebEval

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  run_evaluation.py  setup_playwright.py
data/: test_cases.csv  ux_profiles.csv
docs/: VENDORING.md
src/pl_webeval/: __init__.py  browser_config.py  cli.py  data_models.py  evaluator.py  json_extractor.py  llm_client.py  report_utils.py  setup_mcp.py  state_manager.py  statistics.py
src/pl_webeval/playwright-mcp-main/: package-lock.json  playwright-inject.config.ts  playwright.config.ts
src/pl_webeval/playwright-mcp-main/docs/: inject-tools.md
src/pl_webeval/playwright-mcp-main/src/: tab.ts  tools.ts
src/pl_webeval/playwright-mcp-main/src/tools/: inject.ts  screenshot.ts
src/pl_webeval/playwright-mcp-main/tests/: inject-simple.spec.ts  inject.spec.ts
