[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pl-webeval"
version = "0.1.0"
description = "Persona-Layer Web Evaluator: LLM-assisted web evaluation and persona-conditioned adaptation runner."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PersonaLayer Authors" }]
license = { file = "LICENSE" }
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1"
  # Install a compatible Python MCP client providing the 'mcp' module separately.
]

[project.urls]
Homepage = "https://example.com/[VERIFY-REPO-URL]"

[project.scripts]
pl-webeval = "pl_webeval.cli:main"
pl-webeval-setup-mcp = "pl_webeval.setup_mcp:main"
pl-webeval-healthcheck = "pl_webeval.healthcheck:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pl_webeval = [
  "playwright-mcp-main/**",
  "playwright-mcp-main/**/**"
]

[tool.setuptools.exclude-package-data]
"pl_webeval" = [
  "playwright-mcp-main/node_modules/*",
  "playwright-mcp-main/test-results/*",
  "playwright-mcp-main/playwright-report/*",
  "playwright-mcp-main/.git/*",
  "playwright-mcp-main/.github/*",
  "playwright-mcp-main/examples/*",
  "playwright-mcp-main/example/*",
  "playwright-mcp-main/coverage/*"
]